# mtc

./: README.md  main.py  pyproject.toml
mtc-adb/: pyproject.toml
mtc-adb/src/mtc/: README.md  adb.py
mtc-base/: pyproject.toml
mtc-base/src/mtc/: README.md  touch.py
mtc-maatouch/: pyproject.toml
mtc-maatouch/src/mtc/: README.md  maatouch.py
mtc-minitouch/: pyproject.toml
mtc-minitouch/src/mtc/: README.md  minitouch.py
mtc-mumu/: pyproject.toml
mtc-mumu/src/mtc/: README.md  mumu.py
mtc-utils/: pyproject.toml
mtc-utils/src/mtc/: utils.py
