[project]
name = "mtc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mtc-adb",
    "mtc-base",
    "mtc-maatouch",
    "mtc-minitouch",
    "mtc-mumu",
    "mtc-utils",
]

[tool.uv.workspace]
members = ["mtc-base", "mtc-maatouch", "mtc-minitouch", "mtc-adb", "mtc-mumu", "mtc-utils"]

[tool.uv.sources]
mtc-base = { workspace = true }
mtc-mumu = { workspace = true }
mtc-adb = { workspace = true }
mtc-maatouch = { workspace = true }
mtc-minitouch = { workspace = true }
mtc-utils = { workspace = true }
