[project]
name = "mtc-adb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "adbutils>=2.8.0",
    "mtc-base",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msc"]

[tool.uv.sources]
mtc-base = { workspace = true }
