[project]
name = "mtc-minitouch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "adbutils>=2.8.0",
    "loguru>=0.7.3",
    "mtc-base",
    "mtc-utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtc"]

[tool.uv.sources]
mtc-utils = { workspace = true }
mtc-base = { workspace = true }
